# za

./: .aiignore  .editorconfig  .gitattributes  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  docker.yaml  release.yaml
src/: cli.rs  main.rs
src/command/: ai.rs  ci.rs  codex.rs  completion.rs  deps.rs  diff.rs  diff_tui.rs  gate.rs  gen.rs  git.rs  mod.rs  paths.rs  pin.rs  port.rs  render.rs  run.rs  secrets.rs  stats.rs  style.rs  tool.rs  za_config.rs
src/command/ai/: analytics.rs
src/command/ci/: model.rs  render.rs
src/command/codex/: compact.rs  session_state.rs  tmux.rs  top.rs
src/command/ide/: mod.rs  proc_scan.rs  project_state.rs  toolbox_status.rs  zed_rpc.rs
src/command/tool/: batch.rs  doctor.rs  integrations.rs  listing.rs  policy.rs  source.rs  state.rs  tests.rs
