[package]
name = "za"
description = "🛠️ Zero-to-All — scan your workspace and generate an opinionated CONTEXT.md so AI, code-reviewers and newcomers always have the full picture."
version = "0.1.9"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/za"
homepage = "https://github.com/lvillis/za"
documentation = "https://github.com/lvillis/za/blob/main/README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
anyhow = { version = "1.0.99" }
clap = { version = "4.5.47", features = ["derive"] }
ignore = { version = "0.4.23" }
indicatif = { version = "0.18.0" }
humantime = { version = "2.3.0" }
regex = { version = "1.12.1" }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145" }
is-terminal = { version = "0.4.16" }
globset = { version = "0.4.16" }
once_cell = { version = "1.21.3" }

gix = { version = "0.73.0", default-features = false, features = [
    "blocking-network-client",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }

[features]
default = []

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
