[package]
name = "za"
description = "AI-native CLI for context, tools, and dependency health."
version = "0.1.44"
edition = "2024"
license = "MIT"
authors = ["lvillis <lvillis@outlook.com>"]
repository = "https://github.com/lvillis/za"
homepage = "https://github.com/lvillis/za"
documentation = "https://github.com/lvillis/za/blob/main/README.md"
include = [
  "assets/**",
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
]

[dependencies]
# Error handling and CLI surface.
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
clap = { version = "4.6.0", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions", "color"] }
clap_complete = { version = "4.6.0", default-features = false }
indicatif = { version = "0.18.4", default-features = false, features = ["unicode-width"] }
humantime = { version = "2.3.0", default-features = false }
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
signal-hook = { version = "0.4.3", default-features = false }

# Filesystem scanning, filtering, and locking.
ignore = { version = "0.4.25", default-features = false }
regex = { version = "1.12.3", default-features = false, features = ["std", "unicode", "perf"] }
fs4 = { version = "0.13.1", default-features = false, features = ["sync"] }

# Serialization and integrity checks.
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde", "display"] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }

# HTTP transport and TLS crypto provider.
reqx = { version = "0.1.27", default-features = false, features = ["blocking-tls-rustls-ring"] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }

# Archive extraction for downloaded binaries.
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
tar = { version = "0.4.44", default-features = false }
xz2 = { version = "0.1.7", default-features = false }

[features]
default = []

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
